# stt

./: .gitignore  README.md  pyproject.toml
src/stt/: __init__.py  audio.py  audio_feedback.py  clipboard.py  config.py  main.py  transcribe.py
