[project]
name = "stt"
version = "0.1.0"
description = "Voice-activated speech-to-text with clipboard integration"
readme = "README.md"
authors = [
    { name = "Joel Federer-Gsponer", email = "jgsponer@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-whisper>=20231117",
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
    "pyperclip>=1.11.0",
    "torch>=2.0.0",
    "colorama>=0.4.6",
]

[project.scripts]
stt = "stt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
